# crush

./: CODE_OF_CONDUCT.md  README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/locales/: default.json
src-tauri/resources/locales/af-ZA/: default.json
src-tauri/resources/locales/ar-SA/: default.json
src-tauri/resources/locales/ca-ES/: default.json
src-tauri/resources/locales/cs-CZ/: default.json
src-tauri/resources/locales/da-DK/: default.json
src-tauri/resources/locales/de-DE/: default.json
src-tauri/resources/locales/el-GR/: default.json
src-tauri/resources/locales/en-US/: default.json
src-tauri/resources/locales/es-ES/: default.json
src-tauri/resources/locales/fi-FI/: default.json
src-tauri/resources/locales/fr-FR/: default.json
src-tauri/resources/locales/he-IL/: default.json
src-tauri/resources/locales/hu-HU/: default.json
src-tauri/resources/locales/it-IT/: default.json
src-tauri/resources/locales/ja-JP/: default.json
src-tauri/resources/locales/ko-KR/: default.json
src-tauri/resources/locales/ni-ha/: default.json
src-tauri/resources/locales/nl-NL/: default.json
src-tauri/resources/locales/no-NO/: default.json
src-tauri/resources/locales/pl-PL/: default.json
src-tauri/resources/locales/pt-BR/: default.json
src-tauri/resources/locales/pt-PT/: default.json
src-tauri/resources/locales/ro-RO/: default.json
src-tauri/resources/locales/ru-RU/: default.json
src-tauri/resources/locales/sr-SP/: default.json
src-tauri/resources/locales/sv-SE/: default.json
src-tauri/resources/locales/tr-TR/: default.json
src-tauri/src/: interactive.rs  lib.rs  rd.rs  rpc.rs  tray.rs
src-tauri/src/commands/: boostrapper_importer.rs  discord_rpc.rs  fs.rs  mod.rs  roblox_deployment.rs  watcher.rs  window.rs
(+24 files in other folders)
