[package]
name = "crush"
version = "0.1.5"
description = "the first roblox boostraper that is not a bloxstrap fork"
authors = ["Mally"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crush_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
vergen = { version = "9.0.0", features = ["build", "rustc"] }
tauri-build = { version = "2", features = [] }

[dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm"
] } # window window sahur
walkdir = "2"
dirs-next = "2.0"
md5 = "0.8.0"
zip = "8.6.0"
log = "0.4.29"
futures = "0.3"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
window-vibrancy = "0.7.1"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-fs-pro = "2.4.0"
notify = "8.2.0"
tokio = "1.52.1"
filthy-rich = "0.12.0"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json"] }
sysinfo = "0.38.4"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
chrono = "0.4.44"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.4.1", features = ["deep-link"] }
tauri-plugin-updater = "2"

